test_scores/negative_dimers/features/Q6P2I7.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q6P2I7.pkl.xz